# nlp_transformer_tutorial

./: Makefile  README.md  pyproject.toml
learning_notes/: README.md  ch2.ipynb  ch3.ipynb  ch4.ipynb  ch5.ipynb  ch6.ipynb
nlp_transformer_tutorial/: __init__.py  transformer_tutorial_ch2.py  transformer_tutorial_ch4.py  transformer_tutorial_ch5.py
